AC_INIT([lua-leveldb], [0.4], [https://github.com/marcopompili/lua-leveldb/issues] [https://github.com/marcopompili/lua-leveldb])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_DISABLE_STATIC
LT_INIT
AC_PROG_CC
AC_PROG_CXX
AX_PROG_LUA([5.1], [5.4])
AX_LUA_HEADERS
AC_CONFIG_MACRO_DIRS([m4])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
 Makefile
 src/Makefile
])
AC_OUTPUT
